syntax = "proto3";

option go_package = "github.com/rickschubert/gametitles";
option java_multiple_files = true;
option java_package = "io.grpc.examples.gametitles";
option java_outer_classname = "GameTitlesProto";

package gametitles;

service GameTitles {
  rpc GetGame(GameRequest) returns (GameStats) {}
}

message GameRequest {
  string title = 1;
}

enum Platform {
  PLAYSTATION_5 = 0;
  PC = 1;
  PLAYSTATION_4 = 2;
}

message GameStats {
  string title = 1;
  repeated Platform platforms = 2;
}
